エンドポイントのリファクタ
